# fpga-image-processing-benchmark-sources

./: .gitignore  README.md
implementations/: README.md
implementations/mean-shift/cal/src/: rgb_to_rgb_par01.xdf  rgb_to_rgb_par04.xdf  rgb_to_rgb_par08.xdf
implementations/visual-saliency/cpp/: visual-saliency-std-array.cpp
mean-shift/cal/: .project
mean-shift/cal/src/: rgb_to_rgb_par02.xdf  threads01.xdf
mean-shift/cpp/feature-space/: CMakeLists.txt
mean-shift/cpp/joint-space/: CMakeLists.txt  meanshift_js.cpp
micro-benchmarks/hls_opencv/histogram/: vivado_hls.app
micro-benchmarks/hls_opencv/sobel/: vivado_hls.app
trets2018-datasets/: micro-benchmark-results.data  skeletons-functionality.data  visual-saliency-cpp-fpga.data
trets2018-images/: OrigIm1.eps  OrigIm2.eps  OrigIm3.eps  OrigIm4.eps  cal-translation.eps  circular-buffer.eps  compiler-mapping.eps  convolve.eps  foldScalar.eps  foldVector.eps  imap.eps  language-compilers.eps  map.eps  mk_images.sh  out.yuv  pixel-discrete.eps  pixel-sliding.eps  ripl-code-dataflow.eps  scale.eps  scan.eps  splitX.eps  splitY.eps  stencil2D.eps  transpose.eps  unzip.eps  unzip2D.eps  zedboard-architecture.eps  zipWith.eps  zipWithScalar.eps  zipWithVector.eps
visual-saliency/cpp/: CMakeLists.txt  visual-saliency-static-arrays-reuse.cpp  visual-saliency-static-arrays.cpp  visual-saliency-templates.cpp  visual-saliency.cpp
visual-saliency/hls/blur-filter/: .cproject  .project
visual-saliency/hls/visual-saliency/: .project  vivado_hls.app
visual-saliency/hls/wavelet-transform/: .cproject  .project
(+498 files in other folders)
