cmake_minimum_required (VERSION 2.6)
project (VisualSaliency)
find_package( OpenCV REQUIRED )

add_executable(VisualSaliency visual-saliency.cpp)
add_executable(VisualSaliencyStatic visual-saliency-static-arrays.cpp)
target_link_libraries( VisualSaliency ${OpenCV_LIBS} )
target_link_libraries( VisualSaliencyStatic ${OpenCV_LIBS} )
set(CMAKE_CXX_FLAGS_DEBUG "-fno-stack-protector")
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-stack-protector")
