cmake_minimum_required (VERSION 2.6)
project (VisualSaliency)
find_package( OpenCV REQUIRED )

add_executable(VisualSaliency visual-saliency.cpp)
add_executable(VisualSaliencyStatic visual-saliency-static-arrays.cpp)
add_executable(VisualSaliencyStaticReuse visual-saliency-static-arrays-reuse.cpp)
target_link_libraries( VisualSaliency ${OpenCV_LIBS} )
target_link_libraries( VisualSaliencyStatic ${OpenCV_LIBS} )
target_link_libraries( VisualSaliencyStaticReuse ${OpenCV_LIBS} )
